--- a/frontend/src/styles/Admin.css
+++ b/frontend/src/styles/Admin.css
@@ -23,22 +23,26 @@
     width: 90px;
     height: 80px;
     object-fit: cover;
-    margin: 65px 60px 30px;
+    margin: 40px 55px 30px;
 }
 
 .middlenav li{
     color: white;
     font-size: 16px;
     font-weight: bold;
-    padding: 16px;
+    padding: 14.5px;
     padding-left: 25px;
+}
+
+.bottomnav{
+    margin-bottom: 10px;
 }
 
 .bottomnav li{
     color: white;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: bold;
-    padding: 16px;
+    padding: 14.5px;
     padding-left: 25px;
 }
 
@@ -593,7 +597,7 @@ input[type='file'] {
 }
 
 .order-status-Pending{
-    background-color: rgb(230, 158, 25);
+    background-color: #e69e19;
     padding: 5px;
     border-radius: 5px;
 }
