--- a/frontend/src/styles/Admin.css
+++ b/frontend/src/styles/Admin.css
@@ -16,6 +16,22 @@
 
 .sidenav li:hover{
     cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.05);
+}
+
+.sidenav li.active{
+    background-color: rgba(255, 255, 255, 0.05);
+    position: relative;
+}
+
+.sidenav li.active::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 5px;
+    background-color: #049e47;
 }
 
 .topnav img{
@@ -28,7 +44,7 @@
 
 .middlenav li{
     color: white;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: bold;
     padding: 14.5px;
     padding-left: 25px;
@@ -88,6 +104,17 @@ select {
     padding: 0 10px 0 40px;
     font-size: 16px;
     flex-grow: 1;
+}
+
+.user-controller select {
+    background-color: var(--black);
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: 1px solid var(--gray);
+    height: 40px;
+    cursor: pointer;
+    color: white;
+    margin-right: 25px;
 }
 
 .user-controller input[type='date']{
@@ -1339,19 +1366,6 @@ input[type='file'] {
     color: white;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
-    animation: fadeIn 0.3s ease-in-out;
-}
-
-/* Fade-in effect */
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: translate(-50%, -55%);
-    }
-    to {
-        opacity: 1;
-        transform: translate(-50%, -50%);
-    }
 }
 
 .add-stock i {
@@ -1410,7 +1424,7 @@ input[type='file'] {
     max-height: 150px;
     overflow-y: auto;
     position: absolute;
-    width: 100%;
+    width: 95%;
     z-index: 2;
 }
 
