--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -33,7 +33,7 @@ body{
     height: 560px;
 }
 
-.error div{
+/* .error div{
     padding: 10px;
     background: var(--black);
     border: 1px solid var(--error);
@@ -44,7 +44,18 @@ body{
 
 .error input{
 border: 1px solid var(--error);
-}
+} */
+
+div.error {
+    padding: 10px;
+    border: 1px solid var(--error);
+    color: var(--error);
+    border-radius: 4px;
+    margin: 20px 0;
+  }
+input.error {
+    border: 1px solid var(--error);
+  }
 
 /* login */
 
