--- a/frontend/src/styles/Admin.css
+++ b/frontend/src/styles/Admin.css
@@ -46,7 +46,7 @@
     color: white;
     font-size: 15px;
     font-weight: bold;
-    padding: 14.5px;
+    padding: 14px;
     padding-left: 25px;
 }
 
@@ -58,7 +58,7 @@
     color: white;
     font-size: 15px;
     font-weight: bold;
-    padding: 14.5px;
+    padding: 14px;
     padding-left: 25px;
 }
 
@@ -1802,6 +1802,167 @@ input[type='file'] {
 }
 
 .order-statistic-item-icon i{
+    font-size: 45px;
+    margin-right: 25px;
+    color: white;
+}
+
+
+
+
+.user-statistic-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.user-statistic-controller{
+    display: flex;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+.user-statistic-controller input{
+    background-color: var(--black);
+    border-radius: 5px;
+    border: 1px solid var(--gray);
+    height: 36px;
+    color: white;
+    margin-right: 25px;
+    width: 420px;
+    padding: 0 10px 0 40px;
+    font-size: 16px;
+    flex-grow: 1;
+}
+
+.user-statistic-controller input[type='date']{
+    width: 15%;
+    padding: 0 10px;
+    color: var(--gray);
+}
+
+.user-statistic-controller button{
+    color: black;
+    background-color: var(--green);
+    border: none;
+    border-radius: 5px;
+    width: 90px;
+    height: 35px;
+    margin-left: 15px;
+}
+
+.user-statistic-controller button:hover{
+    cursor: pointer;
+    background-color: var(--green-l);
+}
+
+.user-statistic-controller button i{
+    color: black;
+}
+
+.user-statistic-search{
+    position: relative;
+}
+
+.user-statistic-search i{
+    position: absolute;
+    left: 10px;   
+    top: 50%;
+    transform: translateY(-50%); 
+    color: white;
+}
+
+.user-statistic-controller i:nth-of-type(1){
+    color: white;
+    /* padding: 10px;
+    background-color: var(--gray); */
+}
+
+.user-statistic-controller label{
+    color: white;
+    margin: 0 10px;
+}
+
+.user-statistic-header{
+    font-weight: bold;
+}
+.user-statistic-header,
+.user-statistic-info{
+    display: grid;
+    grid-template-columns: 2fr 3.5fr 2.5fr 4fr 2.5fr 2fr;
+    padding: 25px 0;
+    text-align: center;
+    align-items: center;
+    color: white;
+    border-bottom: 1px solid hsl(0, 0%, 50%, 0.3);
+} 
+
+.user-statistic-status-Active{
+    background-color: #28ac64;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.user-statistic-status-Disabled{
+    background-color: #f84c2c;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.user-statistic-action i{
+    cursor: pointer;
+}
+
+.user-statistic-action i:nth-of-type(1){
+    margin-right: 10px;
+}
+
+.user-statistic-icon{
+    display: flex;
+}
+
+.user-statistic-icon button{
+    background-color: var(--green);
+    height: 40px;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    padding: 0 10px;
+    width: auto;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+}
+
+.user-statistic-icon button:hover{
+    cursor: pointer;
+    background-color: var(--green-l);
+}
+
+.user-statistic-icon i{
+    margin-right: 5px;
+    color: black!important;
+}
+
+.user-statistic-items{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 36px;
+}
+
+.user-statistic-item{
+    display: flex;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.4);
+    width: 33%;
+    height: 150px;
+    padding: 20px 40px;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+}
+
+.user-statistic-item-icon i{
     font-size: 45px;
     margin-right: 25px;
     color: white;
