--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -33,19 +33,6 @@ body{
     height: 560px;
 }
 
-/* .error div{
-    padding: 10px;
-    background: var(--black);
-    border: 1px solid var(--error);
-    color: var(--error);
-    border-radius: 4px;
-    margin: 20px 0;
-}
-
-.error input{
-border: 1px solid var(--error);
-} */
-
 div.error {
     padding: 10px;
     border: 1px solid var(--error);
@@ -417,4 +404,61 @@ input.error {
 #notification.show{
     visibility: visible;
     animation: drop-in 0.8s, drop-out 0.8s 1.8s;
+}
+
+.confirm-container{
+    position: fixed; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 5;
+}
+
+.confirm{
+    position: absolute;
+    top: 50%;
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    padding: 20px;
+    background-color: var(--green-l);
+    width: 90%;
+    max-width: 250px;
+    color: black;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.4);
+    animation: fadeIn 0.5s ease forwards;
+}
+
+.confirm h4{
+    font-weight: bold;
+}
+
+.confirm-btns{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    gap: 5px;
+}
+
+.confirm-btns button{
+    border: none;
+    outline: line;
+    padding: 3px;
+    border-radius: 5px;
+    width: 50%;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translate(-50%, -60%);
+    }
+    to {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
 }
