--- a/frontend/src/styles/Admin.css
+++ b/frontend/src/styles/Admin.css
@@ -1970,6 +1970,95 @@ input[type='file'] {
 
 
 
+.add-role-container{
+    position: fixed; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1;
+}
+
+.add-role{
+    position: absolute;
+    top: 50%;
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    padding: 20px;
+    background-color: var(--black);
+    width: 90%;
+    max-width: 1000px;
+    color: white;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.4);
+}
+
+.add-role i{
+    position: absolute;
+    font-size: 18px;
+    top: 3%;
+    right: 3%;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.add-role i:hover{
+    transform: translateY(-5px);
+}
+
+.add-role label{
+    color: white;
+    font-weight: bold;
+}
+
+.add-role input{
+    background: transparent;
+    padding: 10px;
+    font-size: 16px;
+    color: white;
+    width: 100%;
+    border: solid 1px #363636;
+    outline: none;
+    margin: 10px 0 10px;
+    border-radius: 5px;
+}
+
+.add-role button{
+    padding: 7px 7px 7px 5px;
+    background-color: var(--green);
+    color: black;
+    border: none;
+    font-size: 20px;
+    width: 100px;
+    cursor: pointer;
+    margin-top: 20px;
+    margin: auto;
+    border-radius: 5px;
+}
+
+.add-role button:hover {
+    background-color: var(--green-l);
+}
+
+.add-role h2 {
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.add-role-header,
+.add-role-items{
+    display: grid;
+    grid-template-columns: 3fr 3fr 3fr 3fr 3fr;
+    padding: 10px 0;
+    text-align: center;
+    align-items: center;
+    color: white;
+    border-bottom: 1px solid hsl(0, 0%, 50%, 0.3);
+}
+
+
+
 
 .admin-login-container{
     background: url('../assets/access-denied.png') no-repeat center center/cover;
@@ -2000,14 +2089,6 @@ input[type='file'] {
     height: 52px;
     margin: 17px 0;
 }
-
-/* .admin-login-input label {
-    color: rgba(255, 51, 0, 0.76);
-    font-size: 14px;
-    display: block;
-    margin: 5px;
-    font-family: 'Poppins-Regular', sans-serif;
-} */
 
 #admin-login input{
     width: 100%;
